Feat[#15] 노드 인증 로직 전체 코드 update